@@ -9,29 +9,24 @@ DEB_CFLAGS_MAINT_PREPEND = -Wall
 include /usr/share/dpkg/default.mk
 include /usr/share/dpkg/buildtools.mk
 
-ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-  TESTS_RUN = yes
-  # The following architectures still fail the test suite:
-  #   m68k
-  #     (emulated, no proper test results)
-  #   sh4
-  #     (emulated, no proper test results)
-  #   x32
-  #     (20: io_setup failed)
-  #   riscv64
-  #     (5: 512 instead of EFAULT on write)
-  #   sparc64
-  #     (5: 512 instead of EFAULT on write)
-  #     (19: mremap EINVAL)
-  #   hppa
-  #     (5: 512 instead of EFAULT on write)
-  #     (19: mremap EINVAL)
-  #     (17: looping, timeout?)
-  ifneq (,$(filter $(DEB_HOST_ARCH),m68k sh4 x32 riscv64 sparc64 hppa))
-    TESTS_FLAKY = yes
-  endif
-else
-  TESTS_RUN = no
+# The following architectures still fail the test suite:
+#   m68k
+#     (emulated, no proper test results)
+#   sh4
+#     (emulated, no proper test results)
+#   x32
+#     (20: io_setup failed)
+#   riscv64
+#     (5: 512 instead of EFAULT on write)
+#   sparc64
+#     (5: 512 instead of EFAULT on write)
+#     (19: mremap EINVAL)
+#   hppa
+#     (5: 512 instead of EFAULT on write)
+#     (19: mremap EINVAL)
+#     (17: looping, timeout?)
+ifneq (,$(filter $(DEB_HOST_ARCH),m68k sh4 x32 riscv64 sparc64 hppa))
+  TESTS_FLAKY = yes
 endif
 
 export CC
@@ -56,7 +51,7 @@ clean:
 check-arch: build-arch
 	dh_testdir
 	
-ifeq ($(TESTS_RUN),yes)
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 ifeq ($(TESTS_FLAKY),yes)
 	@echo "Notice: Running tests in flaky mode, errors will be ignored."
 endif
