@@ -6,6 +6,7 @@ libaio (0.3.112-8) UNRELEASED; urgency=medium
     an emulator, and move them to the permanent flaky list.
   * Add x32 to the flaky test suite mode list, it's still failing on the build
     daemons, even though it worked locally.
+  * Remove no longer needed TESTS_RUN logic, and inline the nocheck condition.
 
  -- Guillem Jover <guillem@debian.org>  Mon, 13 Apr 2020 02:22:03 +0200
 
